--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,8 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
 
+  workflow_dispatch:
+
 env:
   DOTNET_VERSION: 5.0.x
   SOLUTION_PATH: ./src/AzureEventGridSimulator.sln
