Isolate HTTP subscriptions

--- a/src/AzureEventGridSimulator/appsettings.json
+++ b/src/AzureEventGridSimulator/appsettings.json
@@ -4,13 +4,15 @@
       "name": "ATopicWithATestSubscriber",
       "port": 60101,
       "key": "TheLocal+DevelopmentKey=",
-      "subscribers": [
-        {
-          "name": "RequestCatcherSubscription",
-          "endpoint": "https://azureeventgridsimulator.requestcatcher.com/",
-          "disableValidation": true
-        }
-      ]
+      "subscribers": {
+        "http": [
+          {
+            "name": "RequestCatcherSubscription",
+            "endpoint": "https://azureeventgridsimulator.requestcatcher.com/",
+            "disableValidation": true
+          }
+        ]
+      }
     }
   ]
 }
