--- a/src/AzureEventGridSimulator/example.appsettings.json
+++ b/src/AzureEventGridSimulator/example.appsettings.json
@@ -4,13 +4,15 @@
       "name": "MyAwesomeTopic",
       "port": 60101,
       "key": "TheLocal+DevelopmentKey=",
-      "subscribers": [
-        {
-          "name": "LocalAzureFunctionSubscription",
-          "endpoint": "http://localhost:7071/runtime/webhooks/EventGrid?functionName=ExampleFunction",
-          "disableValidation": true
-        }
-      ]
+      "subscribers": {
+        "http": [
+          {
+            "name": "LocalAzureFunctionSubscription",
+            "endpoint": "http://localhost:7071/runtime/webhooks/EventGrid?functionName=ExampleFunction",
+            "disableValidation": true
+          }
+        ]
+      }
     },
     {
       "name": "ATopicWithNoSubscribers",
@@ -24,24 +26,28 @@
       "port": 60103,
       "key": "TheLocal+DevelopmentKey=",
       "disabled": true,
-      "subscribers": [
-        {
-          "name": "LocalWebApiSubscription",
-          "endpoint": "https://localhost:5050/api/SomeApi"
-        }
-      ]
+      "subscribers": {
+        "http": [
+          {
+            "name": "LocalWebApiSubscription",
+            "endpoint": "https://localhost:5050/api/SomeApi"
+          }
+        ]
+      }
     },
     {
       "name": "RequestCatcherTopic",
       "port": 60104,
       "key": "TheLocal+DevelopmentKey=",
-      "subscribers": [
-        {
-          "name": "RequestCatcherSubscription",
-          "endpoint": "https://azureeventgridsimulator.requestcatcher.com",
-          "disableValidation": true
-        }
-      ]
+      "subscribers": {
+        "http": [
+          {
+            "name": "RequestCatcherSubscription",
+            "endpoint": "https://azureeventgridsimulator.requestcatcher.com",
+            "disableValidation": true
+          }
+        ]
+      }
     }
   ],
   "Serilog": {
